[project]
name = "pubmed-trends"
version = "0.1.0"
description = ""
authors = [
    {name = "graxel",email = "grazel98@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.4,<3.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "nltk (>=3.9.1,<4.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "bertopic (>=0.17.3,<0.18.0)",
    "plotly (>=6.2.0,<7.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
